[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fonts/ARCADECLASSIC.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Script/UserName.gd" type="Script" id=2]
[ext_resource path="res://Art/ButtonPressed.png" type="Texture" id=3]
[ext_resource path="res://Art/ButtonHover.png" type="Texture" id=4]
[ext_resource path="res://Art/ButtonNormal.png" type="Texture" id=5]
[ext_resource path="res://Scene/ParallaxBackground.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 9
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 14
font_data = ExtResource( 1 )

[node name="UserName" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -209, -24 )
script = ExtResource( 2 )

[node name="NameInput" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.363
anchor_right = 0.5
anchor_bottom = 0.363
margin_left = -42.0
margin_top = -13.525
margin_right = 40.0
margin_bottom = 13.475
custom_fonts/font = SubResource( 1 )
align = 1
max_length = 8
expand_to_text_length = true
placeholder_text = "UserName"

[node name="Label" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.517
anchor_right = 0.5
anchor_bottom = 0.517
margin_left = -41.0
margin_top = -11.475
margin_right = 41.0
margin_bottom = 11.525
custom_fonts/font = SubResource( 2 )
text = "This UserName 
already taken"
align = 1

[node name="NameSubmit" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.669
anchor_right = 0.5
anchor_bottom = 0.669
margin_left = -29.0
margin_top = -9.075
margin_right = 29.0
margin_bottom = 8.925
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="NameSubmit"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -23.0
margin_top = -7.0
margin_right = 25.0
margin_bottom = 8.0
custom_fonts/font = SubResource( 3 )
text = "submit"
align = 1
valign = 1
uppercase = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="ParallaxBackground" parent="." instance=ExtResource( 6 )]

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.209
anchor_right = 0.5
anchor_bottom = 0.209
margin_left = -41.0
margin_top = -11.575
margin_right = 41.0
margin_bottom = 11.425
custom_fonts/font = SubResource( 2 )
text = "type in your
username max 8 ch"
align = 1

[connection signal="pressed" from="NameSubmit" to="." method="_on_NameSubmit_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
